--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
   color: #575459;
 }
 
+a {
+  color: #575459;
+  font-style: italic;
+  text-decoration: none;
+}
+
 h1 {
 font-family: 'Shadows Into Light', cursive;
 font-size: 50px;
@@ -17,7 +23,7 @@ i:hover {
 }
 
 div {
-  width: 800px;
+  width: 900px;
   margin: 0 auto;
   text-align: center;
   font-family: 'Raleway', sans-serif;
@@ -25,7 +31,7 @@ div {
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-  padding: 10px;
+  padding: 20px;
   margin-top: 20px;
 }
 
@@ -42,22 +48,13 @@ div {
 }
 
 td {
-  padding: 5px;
+  padding: 10px;
   text-align: justify;
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  font-weight: 100;
 }
 
 #Instagram {
   font-family: 'Dancing Script', cursive;
-
-}
-
-#sidebar {
-  position: fixed;
-  width: 50px;
-  left: 0;
-  top: 0;
-  bottom: 0;
-}
-#page-content {
-  /*margin-left: 10px;*/
 }
